first commit pages de base

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,18 @@
-<div class="row">
-  <div class="col-md-4"><app-commande-create></app-commande-create></div>
-  <div class="col-md-4"><app-commande-list></app-commande-list></div>
-</div>
+
+<!-- <app-user-login></app-user-login> -->
+ <!-- <app-admin-user-login></app-admin-user-login> -->
+
+<!-- <app-commandes></app-commandes> -->
+
+ <!-- <app-home-page></app-home-page> -->
+  <main>
+  <router-outlet></router-outlet>
+</main>
+<!-- <app-user-create-account></app-user-create-account>  -->
+
+
+
+
+
+
 
