--- a/src/app/commandes/commandes.component.html
+++ b/src/app/commandes/commandes.component.html
@@ -1,2 +1,9 @@
 
+<div class="row">
+  <p> bienvenu {{username}}</p>
+</div>
+<div class="row">
+  <div class="col-md-5"><app-commande-create></app-commande-create></div>
+  <div class="col-md-5"><app-commande-list></app-commande-list></div>
 
+</div>
