save sur base de données

--- a/src/app/module/admin-user/user/view/demande-user/demande-user.component.html
+++ b/src/app/module/admin-user/user/view/demande-user/demande-user.component.html
@@ -1,1 +1,10 @@
-<p>demande-user works!</p>
+
+<div class="row">
+  <app-navbar class="mb-5"></app-navbar>
+</div>
+  <div class="card-body mt-5">
+<app-demande-create></app-demande-create>
+    </div>
+<!--<div>
+  <app-demande-edit></app-demande-edit>
+</div>  -->
