--- a/src/app/module/home-page/home-page.component.html
+++ b/src/app/module/home-page/home-page.component.html
@@ -4,8 +4,8 @@
     <a href="#" class="logo col-md-6">Demande Soutien pour les manifestation scientifiques</a>
     <ul class="navigation col-md-4">
       <li ><a routerLink="/loginUser" class="active">Sign-in</a></li>
-      <li ><a href="/commandes">Postuler</a></li>
-      <li ><a href="#">Comment postuler?</a></li>
+      <li ><a routerLink="/demande">Postuler</a></li>
+      <li ><a href="/details">Comment postuler?</a></li>
     </ul>
   </header>
   <div class="contenu">
