--- a/src/app/module/admin-user/user/user-login/user-login.component.html
+++ b/src/app/module/admin-user/user/user-login/user-login.component.html
@@ -85,7 +85,7 @@
               <div class="row">
                 <div class="col-md-6">
               <!-- Submit button -->
-              <button type="submit" class="btn btn-primary btn-block mb-4" >
+              <button type="submit" class="btn btn-primary btn-block mb-4" (click)="submit()" >
                 Se connecter
               </button>
                 </div>
