--- a/src/app/module/admin-user/user/view/demande-user/demande-list/demande-list.component.html
+++ b/src/app/module/admin-user/user/view/demande-user/demande-list/demande-list.component.html
@@ -1,1 +1,60 @@
-<p>demande-list works!</p>
+
+<div class="row">
+  <app-navbar class="mb-5"></app-navbar>
+</div>
+
+<section class="mt-5" *ngIf="dialogEdit==false && details==false">
+  <div class="col-md-6 offset-3">
+    <table class="table">
+      <thead>
+      <th>Demande</th>
+      <th>référence</th>
+      <th>status</th>
+      <th>date Start</th>
+      <th>remarque</th>
+      </thead>
+      <tbody>
+      <tr>
+        <td class="text-info text-decoration-underline" (click)="showDemande()" >organisation de colloque </td>
+        <td>c13e001256</td>
+        <td>en cours de traitement</td>
+        <td>22-04-2022</td>
+        <td>pas de remarque</td>
+      </tr>
+      </tbody>
+    </table>
+    <div class="col-md-3 offset-5 mt-4"><input  type="submit" class="btn btn-outline-success" (click)="showCreateDemande()"
+                                                value="Nouvelle demande"></div>
+  </div>
+  <div class="col-md-4 offset-4" style="margin-top: 200px" *ngIf="stepShow==1">
+  <div class="modal-content" style="background-color: #cccccc">
+    <div class="col-md-1 offset-11"><a (click)="unshowDemande()"><i class="fa fa-sign-out"></i></a></div>
+    <div class="mb-4 col-md-8 offset-2">
+      <div class="row">
+      <label class="col-md-4"><b>Demande  :</b></label><label class="col-md-8">organistaion de colloque</label>
+      </div>
+      <div class="row">
+      <label class="col-md-4"><b>Référence  :</b></label><label class="col-md-8">c13e001256</label>
+      </div>
+      <div class="row">
+      <label class="col-md-4"><b>Status  :</b></label><label class="col-md-8">en cours de traitement</label>
+      </div>
+    </div>
+    <div class="row">
+      <button class="col-md-2 offset-2" (click)="showDetails()">Détails</button>
+    <button class="col-md-2 offset-2" (click)="showDialogEdit()"><i class="fa fa-edit col-md-2 offset-2"></i></button>
+    <button class="col-md-2 offset-1">Annuler</button>
+    </div>
+  </div>
+  </div>
+</section>
+<div *ngIf="dialogEdit==true">
+  <app-demande-edit></app-demande-edit>
+</div>
+<div *ngIf="details==true">
+  <app-demande-details></app-demande-details>
+</div>
+<div *ngIf="createDemande==true">
+  <app-demande-create></app-demande-create>
+</div>
+
