--- a/src/app/module/admin-user/admin/view/demande-admin/demande-history/demande-history.component.html
+++ b/src/app/module/admin-user/admin/view/demande-admin/demande-history/demande-history.component.html
@@ -1,1 +1,127 @@
-<p>demande-history works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
+  <title>Document</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+</head>
+<body>
+
+<div class="sidebar">
+  <input type="checkbox" id="sidebar-toggle">
+  <h3 class="brand">
+    <span class="fas fa-database m-3"></span>
+    <span>ADMIN</span>
+  </h3>
+
+  <div class="sidebar-menu">
+    <ul>
+      <li (click)="demandeEncours()">
+        <a>
+          <span class="fas fa-home"></span>
+          <span>Historique</span>
+        </a>
+      </li>
+      <li class="clik" (click)="history()">
+        <a>
+          <span class="fas fa-universal-access"></span>
+          <span>Recents demandes</span>
+        </a>
+      </li>
+      <li>
+        <a>
+          <span class="fas fa-database"></span>
+          <span>Account</span>
+        </a>
+      </li>
+    </ul>
+  </div>
+</div>
+
+
+<div class="main-content">
+
+  <header>
+    <div class="search-wrapper">
+      <i class="fas fa-search"></i>
+      <input type="search" placeholder="Search">
+    </div>
+    <div class="souso">Soukaina Qoumi</div>
+    <div class="social-icons">
+      <div></div>
+    </div>
+  </header>
+
+  <main>
+
+    <h2 class="dash-title">historique</h2>
+
+    <section class="recent">
+      <div class="activity-grid">
+        <div class="activity-card">
+          <h3>recent Demandes</h3>
+
+          <div class="table-responsive ">
+            <table>
+              <thead>
+              <tr>
+                <th>Intitulé de la manifestation</th>
+                <th>La reference de la demande</th>
+                <th>Date de creation</th>
+                <th>Status</th>
+                <th>option</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr>
+                <td>App Development</td>
+                <td class="td-team">
+                  <div>#34555</div>
+                </td>
+                <td>15 Aug, 2020</td>
+                <td><span class="badge success">Accepet</span></td>
+                <td>
+                  <button class="btn btn-dark p-1">details</button>
+                  <!--<span class="badge success">Success</span>-->
+                </td>
+              </tr>
+              <tr>
+                <td>Logo Design</td>
+                <td class="td-team">
+                  <div>#26384</div>
+                </td>
+                <td>15 Aug, 2020</td>
+                <td>
+                  <span class="badge warning">reffus</span>
+                </td>
+                <td>
+                  <button class="btn btn-dark p-1">details</button>
+                </td>
+              </tr>
+              <tr>
+                <td>Server setup</td>
+                <td class="td-team">
+                  <div>#86497</div>
+                </td>
+                <td>15 Aug, 2020</td>
+                <td><span class="badge success">Accepet</span></td>
+                <td>
+                  <button class="btn btn-dark p-1">details</button>
+                </td>
+              </tr>
+
+
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </section>
+
+  </main>
+
+</div>
+
+</body>
+</html>
