--- a/src/app/module/admin-user/admin/view/demande-admin/demande-history/demande-history.component.html
+++ b/src/app/module/admin-user/admin/view/demande-admin/demande-history/demande-history.component.html
@@ -65,52 +65,32 @@
           <div class="table-responsive ">
             <table>
               <thead>
-              <tr>
+              <tr >
                 <th>Intitulé de la manifestation</th>
                 <th>La reference de la demande</th>
                 <th>Date de creation</th>
-                <th>Status</th>
+                <th>etat</th>
                 <th>option</th>
               </tr>
               </thead>
               <tbody>
-              <tr>
-                <td>App Development</td>
+              <tr *ngFor="let c  of demandeService.demandes ">
+                <!--<tr *ngFor=" let c of hores | filter:userFilter.name">
+                  <td *ngIf="(hores | filter: userFilter.name).length === 0">No matching elements</td>
+                  <td>{{c.name}}</td>
+                  -->
+                <td>{{c.manifestation.name}}</td>
                 <td class="td-team">
-                  <div>#34555</div>
+                  <div>{{c.ref}}</div>
                 </td>
-                <td>15 Aug, 2020</td>
-                <td><span class="badge success">Accepet</span></td>
+                <td>{{c.createdAt}}</td>
+                <td><span *ngIf="c.etat=='la demande accepter'" class="badge success">{{c.etat}}</span><span *ngIf="c.etat=='demande refuse'" class="badge warning" >{{c.etat}}</span></td>
                 <td>
-                  <button class="btn btn-dark p-1">details</button>
-                  <!--<span class="badge success">Success</span>-->
-                </td>
-              </tr>
-              <tr>
-                <td>Logo Design</td>
-                <td class="td-team">
-                  <div>#26384</div>
-                </td>
-                <td>15 Aug, 2020</td>
-                <td>
-                  <span class="badge warning">reffus</span>
-                </td>
-                <td>
-                  <button class="btn btn-dark p-1">details</button>
-                </td>
-              </tr>
-              <tr>
-                <td>Server setup</td>
-                <td class="td-team">
-                  <div>#86497</div>
-                </td>
-                <td>15 Aug, 2020</td>
-                <td><span class="badge success">Accepet</span></td>
-                <td>
-                  <button class="btn btn-dark p-1">details</button>
+                  <button class="btn btn-dark p-1"  (click)="details(c.ref) ">details</button>
                 </td>
               </tr>
 
+                 <!-- <span class="badge warning">reffus</span> -->
 
               </tbody>
             </table>
