--- a/src/app/module/admin-user/admin/view/demande-admin/demande-en-cours/demande-en-cours.component.html
+++ b/src/app/module/admin-user/admin/view/demande-admin/demande-en-cours/demande-en-cours.component.html
@@ -26,13 +26,7 @@
       <li (click)="history()">
         <a >
           <span class="fas fa-universal-access"></span>
-          <span>Recents demandes</span>
-        </a>
-      </li>
-      <li>
-        <a href="">
-          <span class="fas fa-database"></span>
-          <span>Account</span>
+          <span>Récents demandés</span>
         </a>
       </li>
     </ul>
@@ -60,7 +54,7 @@
     <section class="recent">
       <div class="activity-grid">
         <div class="activity-card">
-          <h3>Nouvelle Demandes</h3>
+          <h3>Nouvelles Demandes</h3>
 
           <div class="table-responsive ">
             <table>
