--- a/src/app/module/home-page/home-page.component.css
+++ b/src/app/module/home-page/home-page.component.css
@@ -20,7 +20,7 @@ Section{
   left: 0;
   width: 100%;
   height: 100%;
-  background-color:#f95801 ;
+  background-color:#027581 ;
 }
 .bg::before{
   content: '';
@@ -52,6 +52,7 @@ header .logo{
 header .navigation{
   position: relative;
   display: flex;
+  width: auto;
 }
 
 header .navigation li{
@@ -181,7 +182,7 @@ header .navigation li a:hover{
   transition: 0.6s;
 }
 .reseau a i:hover{
-  background: #da3604;
+  background: #027581;
 }
 
 
