add service implicated

--- a/src/app/module/admin-user/admin/view/demande-admin/demande-details1/demande-details1.component.html
+++ b/src/app/module/admin-user/admin/view/demande-admin/demande-details1/demande-details1.component.html
@@ -223,7 +223,7 @@
               </div>
             </div>
             <div class="col-sm-3"><div class=" p-2">
-              {{demandeService.demande.manifestation.coordonnateur.lasttName}}
+              {{demandeService.demande.manifestation.coordonnateur.lastName}}
             </div></div>
           </div>
           <div class="row ms-5">
