--- a/src/app/module/admin-user/user/view/navbar/navbar.component.html
+++ b/src/app/module/admin-user/user/view/navbar/navbar.component.html
@@ -1,50 +1,2 @@
-<nav class=" row navbar navbar-expand-md navbar-light fixed-top" style="background-color: #2C3E50">
-
-  <div class="collapse navbar-collapse justify-content-between" id="nav">
-
-    <ul class="navbar-nav col-md-3">
-
-      <li class="nav-item"><a class="nav-link text-light font-weight-bold " href="#"> Home </a>  </li>
-      <li class="nav-item dropdown dropdown-menu-end">
-        <a class="nav-link text-light font-weight-bold  dropdown-toggle " data-target="dropdown">
-          Dashboard
-        </a>
-        <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Créer une nouvelle demande</a>
-          <a class="dropdown-item" href="#">Voir historique</a>
-          <a class="dropdown-item" href="#">des nombres</a>
-          <a class="dropdown-item" href="#">a propos</a>
-        </div>
-
-
-      </li>
-      <li class="nav-item"><a class="nav-link text-light font-weight-bold " href="#">Contact</a>  </li>
-
-    </ul>
-    <form class="form-inline col-md-3">
-      <div class="input-group">
-        <input type="text" class="form-control" placeholder="Search" />
-        <div class="input-group-append">
-          <button type="button" class="btn bg-light"><i class="fas fa-search text-muted"></i>
-          </button>
-        </div>
-      </div>
-    </form>
-    <a  href="#"><i class="fa fa-edge"></i></a>
-    <a  href="#"><i class="fa fa-edge"></i></a>
-    <div>
-      <li class="nav-item dropdown dropdown-menu-end">
-        <a class="nav-link text-light font-weight-bold  dropdown-toggle " data-toggle="dropdown" href="#">
-          {{authenticatedUser.username}} <img src="fa fa-trach">
-        </a>
-        <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Profile</a>
-          <a class="dropdown-item" href="#">Setting</a>
-          <a class="dropdown-item" href="#">Se déconnecter</a>
-        </div>
-      </li>
-
-    </div>
-  </div>
-
-</nav>
+<main> gfgfggff</main>
+<div class="det">fehfe</div>
