--- a/src/app/module/admin-user/user/view/demande-user/demande-create/demande-create.component.css
+++ b/src/app/module/admin-user/user/view/demande-user/demande-create/demande-create.component.css
@@ -6,10 +6,8 @@
 }
 
 .msform fieldset {
-  background: white;
-  border: 0 none;
+  border: 1px solid #f1f5f9;
   border-radius: 0px;
-  box-shadow: 0 0 15px 1px rgba(0, 0, 0, 0.4);
   padding: 20px 30px;
   box-sizing: border-box;
   width: 80%;
@@ -47,7 +45,7 @@
 /*buttons*/
 .msform .action-button {
   width: 100px;
-  background: #ee0979;
+  background: #2C3E50;
   font-weight: bold;
   color: white;
   border: 0 none;
@@ -57,7 +55,7 @@
   margin: 10px 5px;
 }
 .msform .action-button:hover, #msform .action-button:focus {
-  box-shadow: 0 0 0 2px white, 0 0 0 3px #ee0979;
+  box-shadow: 0 0 0 2px white, 0 0 0 3px #2C3E50;
 }
 .msform .action-button-previous {
   width: 100px;
@@ -76,11 +74,15 @@
 /*headings*/
 .fs-title {
   font-size: 18px;
-  text-transform: uppercase;
-  color: #2C3E50;
+  color: white;
   margin-bottom: 10px;
   letter-spacing: 2px;
   font-weight: bold;
+}
+.form
+{
+  background-color:burlywood;
+  padding: 10px;
 }
 .fs-subtitle {
   font-weight: normal;
@@ -136,7 +138,7 @@
 /*marking active/completed steps green*/
 /*The number of the step and the connector before it = green*/
 #progressbar li.active:before, #progressbar li.active:after {
-  background: #ee0979;
+  background: #027581;
   color: white;
 }
 #progressbar li.inactive:before{
@@ -152,6 +154,7 @@ fieldset {
   -o-animation-duration: 1s;-o-animation-name: slidein;
   /* Standard syntax*/
   animation-duration: 1s;animation-name: slidein;
+
 }
 @-webkit-keyframes slidein {
   from { margin-right:100%;width:300%;}
@@ -185,8 +188,16 @@ fieldset {
 .bg{
   position: absolute;
   top: 0;
+  margin-top: 60px;
   left: 0;
   width: 100%;
-  height: 100%;
-  background-color:#f95801 ;
+  height: auto;
+  background-color:#f1f5f9 ;
+}
+.container
+{
+  height: auto;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  background-color: rgba(0,0,0,0.7);
 }
