--- a/src/app/module/admin-user/user/view/sidebar/sidebar.component.css
+++ b/src/app/module/admin-user/user/view/sidebar/sidebar.component.css
@@ -1,19 +1,30 @@
-.reseau a{
-  text-decoration: none;
+.test{
+  height: 60px;
+  padding: 10px;
 }
-.reseau a i{
-  height: 50px;
-  width: 50px;
-  border-radius: 5px;
-  margin: 5px 0;
-  display: grid;
-  place-items: center;
-  background: #333;
-  color: #fff;
-  font-size: 20px;
-  transition: 0.6s;
+.test:hover,.actived,.test:focus{
+  background-color: #f1f5f9;
 }
-.reseau a i:hover{
-  background: #da3604;
+
+li:hover,.active{
+  border-bottom:1px solid #1D2231;
+  color: #1D2231;
+}
+.souso{
+  color: #f1f5f9;
+  display: flex;
+  align-items: center;
+  left:  38.2rem;
+}
+.souso:hover,.activedd{
+  color: #1D2231;
+  display: flex;
+  align-items: center;
+  left:  38.2rem;
+}
+
+.container-fluid{
+  height: 60px;
+  margin: 0;
 }
 
