--- a/src/app/module/home-page/home-page.component.css
+++ b/src/app/module/home-page/home-page.component.css
@@ -20,6 +20,7 @@ Section{
   left: 0;
   width: 100%;
   height: 100%;
+  background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url("https://th.bing.com/th/id/R.d5dac15b8e8d46a24a80170a636e8374?rik=VZMkvGq33WIPHA&riu=http%3a%2f%2fwww.fstg-marrakech.ac.ma%2fFST%2fimages%2ffstg11.jpg&ehk=ScMXk2jPfiqtJHo2puxziJsHBKPCT34RTn45fYvdp7M%3d&risl=&pid=ImgRaw&r=0&sres=1&sresct=1");
   background-color:#027581 ;
 }
 .bg::before{
